# tinyvecd

./: Cargo.toml  LICENSE  README.md
src/: gemini.rs  lib.rs  main.rs  vector_store.rs
