[package]
name = "tinyvecd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
bytemuck = { version = "1.25.0", features = ["derive"] }
futures = "0.3.32"
ignore = "0.4.26"
memmap2 = "0.9.10"
ndarray = "0.17.2"
notify = { version = "8.2.0", features = ["serde"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rusqlite = "0.7.0"
